# data-engineering-on-gcp

./: wirojm.txt
my-project/: pyproject.toml
proj-sales-prediction/: main.py  pipeline.conf  pyproject.toml
